[package]
name = "eve-types-builder"
version = "0.1.0"
edition = "2021"
authors = ["Alex Chen m.ac.alexchen@outlook.com"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/StarChaser-Inc/eve-types-builder"
license-file = "LICENSE"

[profile.dev]
opt-level = 0
debug = 2
panic = "unwind"
overflow-checks = true
lto = false

[profile.release]
lto = true
opt-level = 3
debug = 0
panic = "abort"
overflow-checks = false

[dependencies]
zip = "2.2.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.133"
flate2 = "1.0.35"
